July 29, 2020 - Redesigned Gradient Modules; Not finished

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <div class="pebbleGroup">
       <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_grey.png" alt="Pebble Logo">
-      <h1 id="pebbleText" class="pebbleText">Only time will tell...</h1>
+      <h1 id="pebbleText" class="pebbleText">Connecting...</h1>
     </div>
     <div class="wrapper">
-      <div background-color="green">One</div>
-      <div>Two</div>
-      <div>Three</div>
-      <div>Four</div>
-      <div>Five</div>
-      <div>Six</div>
-      <div>Seven</div>
+
     </div>
-    <div class="gradientHolder">
-      <div id="gradientViewer" class="gradientViewer"></div>
-      <h1 id="gradientName" class="gradientName">Green Lagoon</h1>
+
+    <div class="holder">
+      <div class="gradientView"></div>
+      <h1 class="gradientName">Sunshine</h1>
+      <div class="hexHolder">
+        <div class="startColourPreview"></div>
+        <h2 class="startColourHEX"></h2>
+        <div class="endColourPreview"></div>
+        <h2 class="endColourHEX"></h2>
+      </div>
     </div>
-    <div class="content"></div>
   </body>
   <script src="script.js" onload="getGradients()">
   </script>
