--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="description" content="Create and Share gradients!">
-    <title>Pebble</title>
-    <link rel="icon" href="assets/images/icon_pebble_sunshine.png">
-  </head>
-  <body onload="setInterval('updateTime(), 5000')">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <div class="pebbleGroup">
-      <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_grey.png" alt="Pebble Logo">
-      <h1 id="pebbleText" class="pebbleText">Connecting...</h1>
-    </div>
-    <div class="wrapper">
 
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="description" content="Create and Share gradients!">
+  <title>Pebble</title>
+  <link rel="icon" href="assets/images/icon_pebble_sunshine.png">
+</head>
 
-    <div class="holder">
-      <div class="gradientView"></div>
-      <h1 class="gradientName">Sunshine</h1>
-      <div class="hexHolder">
-        <div class="startColourPreview"></div>
-        <h2 class="startColourHEX"></h2>
-        <div class="endColourPreview"></div>
-        <h2 class="endColourHEX"></h2>
-      </div>
-    </div>
-  </body>
-  <script src="script.js" onload="getGradients()">
-  </script>
+<body>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <div class="pebbleGroup">
+    <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_grey.png" alt="Pebble Logo">
+    <h1 id="pebbleText" class="pebbleText">Connecting... to the server</h1>
+  </div>
+  <div class="wrapper">
+
+  </div>
+</body>
+<script src="script.js" onload="getGradients()">
+</script>
+
 </html>
