--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <div class="pebbleGroup">
-    <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_grey.png" alt="Pebble Logo">
-    <h1 id="pebbleText" class="pebbleText">Connecting... to the server</h1>
+    <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_sunshine.png" alt="Pebble Logo">
+    <h1 id="pebbleText" class="pebbleText">Connecting...</h1>
   </div>
   <div class="wrapper">
 
