--- a/index.html
+++ b/index.html
@@ -15,9 +15,38 @@
     <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_sunshine.png" alt="Pebble Logo">
     <h1 id="pebbleText" class="pebbleText">Connecting...</h1>
   </div>
-  <div class="wrapper">
-
+  <div class="gradientDetails">
+    <div class="gradientDetailsHolder">
+      <div class="detailsGradientViewer"></div>
+      <div class="detailsGradientInfo">
+        <h1 class="detailsGradientName">Sunshine</h1>
+        <h3 class="detailsGradientDescription">A ray of sunshine to brighten up your day</h3>
+      </div>
+      <img class="buttonClosePopup" src="assets/images/icon_close.png" alt="Close Popup">
+    </div>
   </div>
+  <div class="wrapper"></div>
+
+  <!-- <nav class="navbar">
+    <a href="#browse">Browse</a>
+    <a href="#create">Create</a>
+  </nav> -->
+
+  <!-- <nav class="navbar">
+    <div class="navigationOptionsNavBar">
+      <ul>
+        <li><a href="#">Browse</a></li>
+        <li><a href="#">Create</a></li>
+      </ul>
+    </div>
+    <div class="optionsNavBar">
+
+    </div>
+  </nav> -->
+
+  <!-- <div class="gradientDetails">
+
+  </div> -->
 </body>
 <script src="script.js" onload="getGradients()">
 </script>
