--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="gradientDetails">
     <div class="gradientDetailsHolder">
       <div class="detailsGradientViewer"></div>
-      <div class="detailsGradientInfo">
+      <div class="detailsGradientInfo" id="detailsGradientInfo">
         <h1 class="detailsGradientName">Sunshine</h1>
         <h3 class="detailsGradientDescription">A ray of sunshine to brighten up your day</h3>
       </div>
@@ -48,7 +48,6 @@
 
   </div> -->
 </body>
-<script src="script.js" onload="getGradients()">
-</script>
+<script src="script.js" onload="getGradients()"></script>
 
 </html>
