--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <div class="pebbleGroup">
     <img id="pebbleLogo" class="pebbleLogo" src="assets/images/icon_pebble_sunshine.png" alt="Pebble Logo">
     <h1 id="pebbleText" class="pebbleText">Connecting...</h1>
